# reach

./: .dockerignore  .eslintrc.json  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  index.html  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  sitemap.xml  tsconfig.base.json  vitest.config.ts
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs-ci.yml  docs-deploy.yml  snyk-security.yml  socket-security.yml
architecture/design-principles/: index.html
architecture/overview/: index.html
changelog/: index.html
contributing/code-of-conduct/: index.html
contributing/code-style/: index.html
contributing/contributing/: index.html
contributing/security/: index.html
docs/: changelog.md  index.md
docs/architecture/: design-principles.md  overview.md
docs/contributing/: code-of-conduct.md  code-style.md  contributing.md  security.md
docs/getting-started/: installation.md  quick-start.md
e2e/: example.spec.ts
getting-started/installation/: index.html
getting-started/quick-start/: index.html
scripts/: validate_metadata.py  validate_style_guide.py
search/: search_index.json
